# Vigil-Fluminis

./: CMakeLists.txt  LICENSE.txt  README.md  build_debug.bat  build_release.bat  index.html  run.bat
resources/: app.rc  ip_reputation.json  known_malware.json  resources.qrc  threats.json
resources/LICENSES/: Apache-2.0.txt  LICENSE.Phi.txt  LICENSE.Qt.txt  LICENSE.Qwen.txt  LICENSE.llama-cpp.txt
resources/ui/: MainWindow.ui
src/: main.cpp
src/core/: AiAssistant.cpp  AiAssistant.h  BackupManager.cpp  BackupManager.h  BehavioralAnalyzer.cpp  BehavioralAnalyzer.h  ConnectionInfo.h  FileAnalyzer.cpp  FileAnalyzer.h  FirewallManager.cpp  FirewallManager.h  FirewallRule.cpp  FirewallRule.h  IFirewall.h  IpReputationDb.cpp  IpReputationDb.h  KnownMalwareDb.cpp  KnownMalwareDb.h  RiskAnalyzer.cpp  RiskAnalyzer.h  SignatureChecker.cpp  SignatureChecker.h  ThreatDatabase.cpp  ThreatDatabase.h
src/gui/: AiResultDialog.cpp  AiResultDialog.h  AppsWidget.cpp  AppsWidget.h  ConnectionsWidget.cpp  ConnectionsWidget.h  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  OptionsDialog.h  OverviewWidget.cpp  OverviewWidget.h  RuleDialog.cpp  RuleDialog.h  RuleTableModel.cpp  RuleTableModel.h  TrojanTestDialog.cpp  TrojanTestDialog.h
src/platform/windows/: ComFirewall.cpp  ComFirewall.h  ConnectionEnumerator.cpp  ConnectionEnumerator.h  Elevation.cpp  Elevation.h
